--- a/package.json
+++ b/package.json
@@ -11,11 +11,10 @@
   },
   "dependencies": {
     "expo": "~53.0.9",
+    "expo-constants": "~17.1.6",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.8.1",
-    "react": "19.0.0",
-    "react-native": "0.79.2",
-    "expo-constants": "~17.1.6"
+    "react-native": "0.79.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
